# Django_my_first_project

./: README.md
M_18_Django_Cache/: Dockerfile  orders.csv  pyproject.toml
M_18_Django_Cache/mysite/: db.sqlite3  log.txt  requirements.txt
M_18_Django_Cache/mysite/blogapp/: models.py  urls.py  views.py
M_18_Django_Cache/mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_title_alter_author_name_and_more.py
M_18_Django_Cache/mysite/database/: db.sqlite3
M_18_Django_Cache/mysite/myauth/: forms.py  models.py  urls.py  views.py
M_18_Django_Cache/mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
M_18_Django_Cache/mysite/mysite/: settings.py  urls.py
M_18_Django_Cache/mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
M_18_Django_Cache/mysite/shopapp/: admin.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
M_18_Django_Cache/mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
M_18_Django_Cache/mysite/shopapp/migrations/: 0001_initial.py  0002_product_archived_product_created_at_product_discount_and_more.py  0003_order.py  0004_order_user.py  0005_order_products.py  0006_alter_product_discount.py  0007_product_created_by_alter_order_delivery_address_and_more.py  0008_alter_product_created_by.py  0009_alter_order_options_alter_product_options.py  0010_alter_order_options.py  0011_alter_product_options_productimage.py  0012_product_preview.py
M_18_Django_Cache/mysite/shopapp/templates/: 404.html
(+40 files in other folders)
