[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["Vitalij Shpakov <vitalik1987autoexp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.0"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.2.0"
pillow = "^10.0.0"
gunicorn = "^21.2.0"
sentry-sdk = "^1.30.0"
drf-spectacular = "^0.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
